refractor: changed all hardcoded string