@@ -28,7 +28,7 @@ public class ValidationUtil {
     }
 
     private static String encode(String identifier) throws UnsupportedEncodingException {
-        return URLEncoder.encode(identifier, "UTF-8");
+        return URLEncoder.encode(identifier, String.valueOf(R.string.UTF_8));
     }
 
     public static Boolean isUrlSafe(String string) {
